# Art

./: CMakeLists.txt  Gpps  LuaQuikServer.lua  NNs  NNs.cpp  Zm  Zm.cpp  brent.csv  client_log.txt  cline  cline.cpp  cline.quik.lua  gpps1  lib.cpp  lua.quik.lua  lua.server.lua  nS.cpp  nS2  nS2.cpp  nS3.cpp  pass.cpp  pineTrading  quuuuuik.script.lua  sam  sam.cpp  server_log.txt  te.cpp  tess  test  test1.cpp  test2.cpp  testlua.lua  training_data.txt  trainingdata.txt  weights.txt  Тест  Типы_Данных.txt  данные.txt
Cline/: CMakeLists.txt  Graphics.txt  asd  asd.cpp  cline  lua.server(1).lua  lua.server.lua  razbor.cpp  server_log.txt
Terminal/: CMakeLists.txt  Hambat  Hambat.cpp  client_log.txt  client_log1.txt  data.csv  main  main.cpp  network.cpp  network.hpp  obmen  obmen.cpp  ov2.cpp  prob  prob.cpp  prob1.cpp  testFon  testFon.cpp  test_opencv  testi  testi.cpp  v1  v1.cpp  v2  v2.cpp  v3  v3.cpp  v4  v4.cpp  v5  v5.cpp  v6  v6.cpp  v7  web.cpp  window_gui.cpp  window_gui.hpp
testu/: if_for_while.txt  main.cpp  nZ  nZ.cpp  pass.cpp  server  server.cpp  server_log.txt  te  tess.cpp  test.cpp  test22  Тест.cpp  библиотеки.cpp  вф.txt  измененные_данные.txt  тест1  тест1.cpp
